test tinh huyen thi xa

--- a/src/main/resources/templates/shop/detail.html
+++ b/src/main/resources/templates/shop/detail.html
@@ -146,17 +146,17 @@
                     <hr class="divider mb-1">
 
                     <div class="product-single-share">
-<!--                        <label class="sr-only">Share:</label>-->
+                        <label class="sr-only">Share:</label>
 
-<!--                        <div class="social-icons mr-2">-->
-<!--                            <a href="#" class="social-icon social-facebook icon-facebook" target="_blank" title="Facebook"></a>-->
-<!--                            <a href="#" class="social-icon social-twitter icon-twitter" target="_blank" title="Twitter"></a>-->
-<!--                            <a href="#" class="social-icon social-linkedin fab fa-linkedin-in" target="_blank" title="Linkedin"></a>-->
-<!--                            <a href="#" class="social-icon social-gplus fab fa-google-plus-g" target="_blank" title="Google +"></a>-->
-<!--                            <a href="#" class="social-icon social-mail icon-mail-alt" target="_blank" title="Mail"></a>-->
-<!--                        </div>&lt;!&ndash; End .social-icons &ndash;&gt;-->
+                        <div class="social-icons mr-2">
+                            <a href="#" class="social-icon social-facebook icon-facebook" target="_blank" title="Facebook"></a>
+                            <a href="#" class="social-icon social-twitter icon-twitter" target="_blank" title="Twitter"></a>
+                            <a href="#" class="social-icon social-linkedin fab fa-linkedin-in" target="_blank" title="Linkedin"></a>
+                            <a href="#" class="social-icon social-gplus fab fa-google-plus-g" target="_blank" title="Google +"></a>
+                            <a href="#" class="social-icon social-mail icon-mail-alt" target="_blank" title="Mail"></a>
+                        </div><!-- End .social-icons -->
 
-<!--                        <a href="#" class="add-wishlist" title="Add to Wishlist">Add to Wishlist</a>-->
+                        <a href="#" class="add-wishlist" title="Add to Wishlist">Add to Wishlist</a>
                     </div><!-- End .product single-share -->
                 </div><!-- End .product-single-details -->
             </div><!-- End .row -->
@@ -205,11 +205,11 @@
                                                 <img th:src="@{/shop/images/avatar/avatar.png}" width="65" height="65" alt="avatar"/>
                                             </div><!-- End .comment-avatar-->
                                             <div class="comment-box">
-<!--                                                <div class="ratings-container">-->
-<!--                                                    <div class="product-ratings">-->
-<!--                                                        <span class="ratings" style="width:80%"></span>&lt;!&ndash; End .ratings &ndash;&gt;-->
-<!--                                                    </div>&lt;!&ndash; End .product-ratings &ndash;&gt;-->
-<!--                                                </div>&lt;!&ndash; End .ratings-container &ndash;&gt;-->
+                                                <div class="ratings-container">
+                                                    <div class="product-ratings">
+                                                        <span class="ratings" style="width:80%"></span><!-- End .ratings -->
+                                                    </div><!-- End .product-ratings -->
+                                                </div><!-- End .ratings-container -->
 
                                                 <div class="comment-info mb-1">
                                                     <h4 class="avatar-name" th:text="${comment.user.fullName}"></h4> - <span class="comment-date" th:text="${#dates.format(comment.createdAt, 'dd-MM-yyyy')}">Novemeber 15, 2019</span>
