--- a/src/main/resources/templates/shop/index.html
+++ b/src/main/resources/templates/shop/index.html
@@ -92,11 +92,11 @@
                         <div class="ratings-container">
                             <p class="card-text sold">&Dstrok;&atilde; b&aacute;n <span th:text="${newProduct.totalSold}"></span> &dstrok;&ocirc;i</p>
                         </div><!-- End .product-container -->
-<!--                        <div class="product-action">-->
-<!--                            <a href="#" class="btn-icon-wish"><i class="icon-heart"></i></a>-->
-<!--                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Mua hàng</button>-->
-<!--                            <a href="ajax/product-quick-view.html" class="btn-quickview" title="Quick View"><i class="fas fa-external-link-alt"></i></a>-->
-<!--                        </div>-->
+                        <div class="product-action">
+                            <a href="#" class="btn-icon-wish"><i class="icon-heart"></i></a>
+                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Mua hàng</button>
+<!--                            <a href="ajax/product-quick-view.html" class="btn-quickview" title="Quick View" ><i class="fas fa-external-link-alt"></i></a>-->
+                        </div>
                     </div><!-- End .product-details -->
                 </div>
                 </th:block>
@@ -143,11 +143,11 @@
                         <div class="ratings-container">
                             <p class="card-text sold">&Dstrok;&atilde; b&aacute;n <span th:text="${sell.totalSold}"></span> &dstrok;&ocirc;i</p>
                         </div><!-- End .product-container -->
-<!--                        <div class="product-action">-->
-<!--                            <a href="#" class="btn-icon-wish"><i class="icon-heart"></i></a>-->
-<!--                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Mua hàng</button>-->
+                        <div class="product-action">
+                            <a href="#" class="btn-icon-wish"><i class="icon-heart"></i></a>
+                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Mua hàng</button>
 <!--                            <a href="ajax/product-quick-view.html" class="btn-quickview" title="Quick View"><i class="fas fa-external-link-alt"></i></a>-->
-<!--                        </div>-->
+                        </div>
                     </div><!-- End .product-details -->
                 </div>
                 </th:block>
@@ -189,11 +189,11 @@
                         <div class="ratings-container">
                             <p class="card-text sold">Số lượt xem: <span th:text="${view.views}"></span></p>
                         </div><!-- End .product-container -->
-<!--                        <div class="product-action">-->
-<!--                            <a href="#" class="btn-icon-wish"><i class="icon-heart"></i></a>-->
-<!--                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Mua hàng</button>-->
+                        <div class="product-action">
+                            <a href="#" class="btn-icon-wish"><i class="icon-heart"></i></a>
+                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Mua hàng</button>
 <!--                            <a href="ajax/product-quick-view.html" class="btn-quickview" title="Quick View"><i class="fas fa-external-link-alt"></i></a>-->
-<!--                        </div>-->
+                        </div>
                     </div><!-- End .product-details -->
                 </div>
                 </th:block>
