test tinh huyen thi xa

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,6 +1,6 @@
 <th:block th:fragment="header">
     <header class="header bg-dark">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" >
         <div class="header-middle">
             <div class="container">
                 <div class="header-left col-lg-2 w-auto pl-0">
@@ -45,6 +45,7 @@
                         <li class="float-right"><a href="/doi-hang" class="text-white font1">Chính sách</span></a></li>
                         <li class="float-right"><a href="/tin-tuc" class="text-white font1">Tin tức</a></li>
                         <li class="float-right"><a href="/san-pham" class="text-white font1">Sản phẩm</a></li>
+                        <li class="float-right"><a href="/cart" class="text-white font1">Giỏ hàng</a></li>
                     </ul>
                 </nav>
             </div><!-- End .container -->
