--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -171,26 +171,46 @@
     <!--    </div>&lt;!&ndash; End .mobile-menu-wrapper &ndash;&gt;-->
     <!--</div>&lt;!&ndash; End .mobile-menu-container &ndash;&gt;-->
 
-    <!-- Add Cart Modal -->
-    <!--<div class="modal fade" id="addCartModal" tabindex="-1" role="dialog" aria-labelledby="addCartModal" aria-hidden="true">-->
-    <!--    <div class="modal-dialog" role="document">-->
-    <!--        <div class="modal-content">-->
-    <!--            <div class="modal-body add-cart-box text-center">-->
-    <!--                <p>You've just added this product to the<br>cart:</p>-->
-    <!--                <h4 id="productTitle"></h4>-->
-    <!--                <img src="#" id="productImage" width="100" height="100" alt="adding cart image">-->
-    <!--                <div class="btn-actions">-->
-    <!--                    <a href="cart.html">-->
-    <!--                        <button class="btn-primary">Go to cart page</button>-->
-    <!--                    </a>-->
-    <!--                    <a href="#">-->
-    <!--                        <button class="btn-primary" data-dismiss="modal">Continue</button>-->
-    <!--                    </a>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
-    <!--</div>-->
+<!--     Add Cart Modal-->
+<!--    <div class="modal fade" id="addCartModal" tabindex="-1" role="dialog" aria-labelledby="addCartModal" aria-hidden="true">-->
+<!--        <div class="modal-dialog" role="document">-->
+<!--            <div class="modal-content">-->
+<!--                <div class="modal-body add-cart-box text-center">-->
+<!--                    <p>You've just added this product to the<br>cart:</p>-->
+<!--                    <h4 id="productTitle"></h4>-->
+<!--                    <img src="#" id="productImage" width="100" height="100" alt="adding cart image">-->
+<!--                    <div class="btn-actions">-->
+<!--                        <a href="cart.html">-->
+<!--                            <button class="btn-primary">Go to cart page</button>-->
+<!--                        </a>-->
+<!--                        <a href="#">-->
+<!--                            <button class="btn-primary" data-dismiss="modal">Continue</button>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--    <div th:fragment="standard_modal" class="modal fade text-center" id="myModal">-->
+<!--      <div class="modal-dialog">-->
+<!--        <div class="modal-content">-->
+
+<!--          <div class="modal-header">-->
+<!--            <h4 class="modal-title" id="modalTitle">Warning</h4>-->
+<!--            <button type="button" class="close" data-dismiss="modal">&times;</button>-->
+<!--          </div>-->
+
+<!--          <div class="modal-body">-->
+<!--            <span id="modalBody"></span>-->
+<!--          </div>-->
+<!--          <div class="modal-footer">-->
+<!--            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>-->
+<!--          </div>-->
+
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
 
     <a id="scroll-top" href="#top" title="Top" role="button"
       ><i class="icon-angle-up"></i
