--- a/src/main/resources/templates/shop/index.html
+++ b/src/main/resources/templates/shop/index.html
@@ -94,7 +94,7 @@
                         </div><!-- End .product-container -->
 <!--                        <div class="product-action">-->
 <!--                            <a href="#" class="btn-icon-wish"><i class="icon-heart"></i></a>-->
-<!--                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Mua hàng</button>-->
+<!--                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal" >Mua hàng</button>-->
 <!--                            <a href="ajax/product-quick-view.html" class="btn-quickview" title="Quick View"><i class="fas fa-external-link-alt"></i></a>-->
 <!--                        </div>-->
                     </div><!-- End .product-details -->
@@ -145,7 +145,7 @@
                         </div><!-- End .product-container -->
 <!--                        <div class="product-action">-->
 <!--                            <a href="#" class="btn-icon-wish"><i class="icon-heart"></i></a>-->
-<!--                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Mua hàng</button>-->
+<!--                            <button class="btn-icon btn-add-cart" data-toggle="modal" data-target="#addCartModal">Thêm vào giỏ</button>-->
 <!--                            <a href="ajax/product-quick-view.html" class="btn-quickview" title="Quick View"><i class="fas fa-external-link-alt"></i></a>-->
 <!--                        </div>-->
                     </div><!-- End .product-details -->
