--- a/src/main/resources/templates/fragment/fragments.html
+++ b/src/main/resources/templates/fragment/fragments.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{/layout/layout :: main-fragment(
-                                                                     ~{:: title},
-                                                                    'header',
-                                                                    'footer',
-                                                                     ~{:: #css-resources},
-                                                                     ~{:: #js-resources},
-                                                                     ~{:: #main-content}
-                                                                    )}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <title>Hướng dẫn mua hàng</title>
-  <th:block id="css-resources">
-
-  </th:block>
+  <th:block id="css-resources"></th:block>
 </head>
+
 <body>
 <div th:fragment="standard_modal" class="modal fade text-center" id="myModal">
   <div class="modal-dialog">
@@ -30,12 +22,19 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal" id="closeModalBtn">Close</button>
       </div>
 
     </div>
   </div>
 </div>
+
+<!-- Thêm mã JavaScript -->
+<script>
+        document.getElementById("closeModalBtn").addEventListener("click", function() {
+            location.reload();
+        });
+    </script>
 </body>
+
 </html>
-<!--Add Cart Modal&ndash;&gt;-->
